Update "/BlogPosts-x" in index.html

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <h6 class="h6 text-muted fw-light">May 1 &bull; 2 mins</h6>
             </div>
             <div class="container-sm pt-4">
-              <a href="/blogPosts-7.html" class="text-decoration-none" target="_blank"">
+              <a href="blogPosts-7.html" class="text-decoration-none" target="_blank"">
                 <h3 class="fw-normal fs-1">
                   The one thing I would tell to my 16 year old self
                 </h3>
@@ -171,7 +171,7 @@
               <h6 class="h6 text-muted fw-light">May 1 &bull; 5 mins</h6>
             </div>
             <div class="container-sm pt-4">
-              <a href="/blogPosts-6.html" class="text-decoration-none" target="_blank"">
+              <a href="blogPosts-6.html" class="text-decoration-none" target="_blank"">
                 <h3 class="fw-normal fs-1">
                   Can't stop scrolling through my friends' feed?
                 </h3>
@@ -213,7 +213,7 @@
               <h6 class="h6 text-muted fw-light">April 1 &bull; 3 mins</h6>
             </div>
             <div class="container-sm pt-4">
-              <a href="/blogPosts-5.html" class="text-decoration-none" target="_blank">
+              <a href="blogPosts-5.html" class="text-decoration-none" target="_blank">
                 <h3 class="fw-normal fs-1">
                   How I stopped being afraid of being weak
                 </h3>
@@ -255,7 +255,7 @@
               <h6 class="h6 text-muted fw-light">February 1 &bull; 2 mins</h6>
             </div>
             <div class="container-sm pt-4">
-              <a href="/blogPosts-4.html" class="text-decoration-none" target="_blank">
+              <a href="blogPosts-4.html" class="text-decoration-none" target="_blank">
                 <h3 class="fw-normal fs-1">
                   Five great side effects of running with music
                 </h3>
@@ -297,7 +297,7 @@
               <h6 class="h6 text-muted fw-light">February 1 &bull; 3 mins</h6>
             </div>
             <div class="container-sm pt-4">
-              <a href="/blogPosts-3.html" class="text-decoration-none" target="_blank">
+              <a href="blogPosts-3.html" class="text-decoration-none" target="_blank">
                 <h3 class="fw-normal fs-1">
                   Five things that would make you sleep better at night
                 </h3>
