--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
     />
     <!-- <link rel="stylesheet" href="/stylesheet.css"/> -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+    <link rel="icon" type="image/blog-icon" href="images/favicon.ico">
   </head>
   <body class="bg-white body">
     <div class="container-sm-fluid">
