--- a/blogPosts-1.html
+++ b/blogPosts-1.html
@@ -16,6 +16,7 @@
     />
     <!-- <link rel="stylesheet" href="/stylesheet.css"/> -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+    <link rel="icon" type="image/blog-icon" href="images/favicon.ico">
   </head>
   <body class="bg-white body">
     <div class="container-sm-fluid">
@@ -24,7 +25,7 @@
         class="navbar navbar-expand-lg bg-body-tertiary sticky-top navbar-light"
       >
         <div class="container-sm">
-          <a class="navbar-brand" href="#"
+          <a class="navbar-brand" href="index.html"
             ><h1 class="h1 display-3">Inner Peace</h1></a
           >
           <br />
